[update to 0.18.1] Use C++ scoping for handling buffer deletion
David Edmundson (1):
      Use C++ scoping for handling buffer deletion

Pier Luigi Fiorini (3):
      Fix Travis CI
      Update ChangeLog
      Bump version to 0.18.1

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = sddm
-url = https://github.com/sddm/sddm/releases/download/v0.18.0/sddm-0.18.0.tar.gz
+url = https://github.com/sddm/sddm/releases/download/v0.18.1/sddm-0.18.1.tar.xz
 archives = 
 giturl = https://github.com/sddm/sddm.git
 
