--- a/options.conf
+++ b/options.conf
@@ -1,8 +1,10 @@
 [package]
 name = sddm
-url = https://github.com/sddm/sddm/releases/download/v0.18.1/sddm-0.18.1.tar.xz
+url = https://github.com/sddm/sddm/releases/download/v0.19.0/sddm-0.19.0.tar.xz
 archives = 
 giturl = https://github.com/sddm/sddm.git
+domain = 
+alias = 
 
 [autospec]
 # build 32 bit libraries
@@ -17,7 +19,7 @@ autoupdate = false
 broken_c++ = false
 # disable parallelization during build
 broken_parallel_build = false
-# this package is a library compatability package and only ships versioned library files
+# this package is a library compatibility package and only ships versioned library files
 compat = false
 # set conservative build flags
 conservative_flags = false
@@ -33,8 +35,12 @@ insecure_build = false
 keepstatic = false
 # do not require autostart subpackage
 no_autostart = true
+# do not generate debuginfo for this package
+nodebug = false
 # disable stripping binaries
 nostrip = false
+# configure build also for openmpi
+openmpi = false
 # optimize build for size over speed
 optimize_size = false
 # set profile for pgo
