sddm: Autospec creation for update from version 0.19.0 to version 0.20.0
Adrián Chaves (1):
      Add a translation for Galician

Aleix Pol (83):
      Fix warning from SDDM::generateName()
      Greeter: Support setting environment variables
      Bump to Qt 5.15, port away from deprecated APIs
      pam: Do not use tally2 if faillock is present
      Initialise Greeter::m_display from the start
      Add Q_ENUM
      Make it possible to stop Auth instances
      Annotate UserSessions as finished when they can't be started
      Also acknowledge that sessions might crash in non-test mode
      Stop the process if the greeter fails
      Also announce a UserSession as finished when it's stopped
      Provide Q_ENUM to SDDM::Auth enums
      Add some more information about what is exactly happening
      Move launching X11-User and Wayland into a separate process
      XOrgUserHelper: Initialise environment
      Make sure helpers have debug handlers
      x11user: Quit helper with the session
      x11 user: we also need to launch the server on non-greeter sessions
      UserSession::stop: Improve how we stop processes
      Stop the session process as soon as we know it's getting closed
      When not on rootful X, we don't need a new VT every time
      Only create a new VT if we really need it
      Make some local variables const
      Let UserSession cache its processId on its own
      Remove unnecessary headers
      x11user: Need to switch to its vt as it starts
      Display: Do not start the greeter from the display ends
      Display: stop the greeter before we start the session
      UserSession: Improve "Failed to take control" error message
      Use a compile-time connect for SocketServer
      MessageHandler: Ensure debug files are written
      Display: Use a QPointer for the local socket
      helper: Make sure helper processes terminate upon SIGTERM
      UserSession: Don't stop the process if it was never started
      Make sure we handle UNIX si

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = sddm
-url = https://github.com/sddm/sddm/releases/download/v0.19.0/sddm-0.19.0.tar.xz
+url = https://github.com/sddm/sddm/archive/v0.20.0/sddm-0.20.0.tar.gz
 archives = 
 giturl = https://github.com/sddm/sddm.git
 domain = 
@@ -19,6 +19,8 @@ autoupdate = true
 broken_c++ = false
 # disable parallelization during build
 broken_parallel_build = false
+# create vendor archive with cargo
+cargo_vendor = false
 # this package is a library compatibility package and only ships versioned library files
 compat = false
 # set conservative build flags
